# function_name_classifier

./: .gitignore  ASTs.ndjson  AnalysisVisitor.cpp  AnalysisVisitor.h  CMakeLists.txt  DEADJOE  TODO.txt  client.ovpn  code_metrics.py  environment.yaml  functionsASTs.json  main.cpp  misclass_distr.py  names.txt  requirements.txt  results.txt  train_model.py  vlak.txt
.ipynb_checkpoints/: misclass_distr-checkpoint.py
attention_nn/: generate_vocabs.py  stratifiedKFold.py
attention_nn/analysis/: data_drops_and_analysis.py
documentation/: documentation.aux  documentation.bbl  documentation.blg  documentation.fdb_latexmk  documentation.fls  documentation.out  documentation.synctex(busy)  documentation.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
processAST/: AsciiTreeProcessor.py  Node.py  NodeToNodePaths.py  NodeTree.py  main.py
psycheC_ast/: AnalysisVisitor.cpp  CMakeLists.txt  README.md  main.cpp
random_forests/: random_forest.py  stratifiedKFold.py
scripts/: clearErrorASTs.sh  filter_csv_for_c.py  processAll.sh  runAll.sh
tmp/: tempSourceCode.c
training_pipeline/: AttentionCNNClassifier.py  AttentionNNClassifier.py  NodeToNodePaths.py  aggregated_avg.py  consts.py  data_drops.py  data_drops_analysis.py  frequencyAnalysis.py  generate_vocabs.py  one_func.txt  stratification.py  stratifiedKFold.py  test_one.py  test_valid_strat.py  testing_model.py  train_valid_strat.py
transformers/: bert.py  source_code_bert.py  stratifiedKFold.py  test_bert.py  test_source_code_bert.py
(+79 files in other folders)
